# gtkwave

gtkwave3/: .gtkwaverc  ANALOG_README.TXT  AUTHORS  CHANGELOG.TXT  ChangeLog  GNU.TXT  INSTALL.TXT  LICENSE.TXT  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  depcomp  distro_from_cvs.sh  distro_from_svn.sh  missing  tcl.m4
gtkwave3/contrib/: Makefile.am  Makefile.in
gtkwave3/doc/: Makefile.in  gtkwave.odt
gtkwave3/examples/: Makefile.am  Makefile.in  des.gtkw  des.sav  gtkwaverc  transaction.c  transaction.gtkw  transaction.sav
gtkwave3/man/: Makefile.am  Makefile.in  evcd2vcd.1  fst2vcd.1  gtkwave.1  gtkwaverc.5  lxt2miner.1  lxt2vcd.1  rtlbrowse.1  shmidcat.1  twinwave.1  vcd2fst.1  vcd2lxt.1  vcd2lxt2.1  vcd2vzt.1  vermin.1  vzt2vcd.1  vztminer.1
gtkwave3/share/: Makefile.in
gtkwave3/share/applications/: Makefile.am  Makefile.in  gtkwave.desktop  x-gtkwave-extension-ae2.desktop  x-gtkwave-extension-aet.desktop  x-gtkwave-extension-evcd.desktop  x-gtkwave-extension-fst.desktop  x-gtkwave-extension-ghw.desktop  x-gtkwave-extension-gtkw.desktop  x-gtkwave-extension-lx2.desktop  x-gtkwave-extension-lxt.desktop  x-gtkwave-extension-lxt2.desktop  x-gtkwave-extension-vcd.desktop  x-gtkwave-extension-vzt.desktop
gtkwave3/src/: Makefile.am  Makefile.in  ae2.c  ae2.h  analyzer.c  analyzer.h  baseconvert.c  bitvec.c  bsearch.c  bsearch.h  busy.c  busy.h  clipping.c  clipping.h  color.c  color.h  currenttime.c  currenttime.h  debug.c  debug.h  discardbuttons.c  edgebuttons.c  entry.c  extload.c  extload.h  fetchbuttons.c  fgetdynamic.c  (+111 more)
(+159 files in other folders)
